argocd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: app
  labels:
    app: app-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: app-v1
  selector:
    app: app-v1
