argocd/deploy-argocd.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-v1
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: pozos-website
        image: php:apache
        ports:
        - name: pozos-website
          containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: pozos-website
      volumes:
      - name: pozos-website
        hostPath:
          # directory location on host
          path: /home/barry2abdulrahim/gitOps-student-list/website
          # this field is optional
          type: Directory 
      
      - name: studentjson
        hostPath:
          # directory location on host
          path: /home/barry2abdulrahim/gitOps-student-list/simple_api #/student_age.json
          # this field is optional
          type: Directory
         
      imagePullSecrets:
      - name: resistry-gcr

---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: app
  labels:
    app: app-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: app-v1
  selector:
    app: app-v1

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-tls
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`studentlist.demo.telemaque.fr`)
      services:
        - name: app-v1
          port: 80
  tls:
    certResolver: myresolver
